updated mn install

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ cache:
 before_script:
   - git clone git://github.com/mininet/mininet
   - cd mininet
-  - git checkout -b 2.2.0b3
+  - git checkout -b 2.2.2
   - util/install.sh -a
   - sudo mn --test pingall
   - python -V               # Print out python version for debugging
