--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ before_script:
   - git clone git://github.com/mininet/mininet
   - cd mininet
   - git checkout -b 2.2.2
-  - sh util/install.sh -a
+  - make install
   - sudo mn --test pingall
   - python -V               # Print out python version for debugging
   # - pip install virtualenv
