--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,7 @@ cache:
     - venv/
 
 before_script:
+  - apt update
   - apt-get install -y git
   - git clone git://github.com/mininet/mininet
   - cd mininet
