--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ before_script:
   - git clone git://github.com/mininet/mininet
   - cd mininet
   - git checkout -b 2.2.2
-  - make install
+  - sh util/install.sh -a
   - python -V               # Print out python version for debugging
   # - pip install virtualenv
   # - virtualenv venv
