--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,8 @@ before_script:
   - git clone git://github.com/mininet/mininet
   - cd mininet
   - git checkout -b 2.2.2
-  - sudo util/install.sh
+  - make install
+  # - sudo util/install.sh
   - python -V               # Print out python version for debugging
   # - pip install virtualenv
   # - virtualenv venv
