--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ cache:
 
 before_script:
   - apt update
-  - apt-get install -y git make
+  - apt-get install -y git make python gcc
   - git clone git://github.com/mininet/mininet
   - cd mininet
   - git checkout -b 2.2.2
