--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,8 @@ before_script:
 
 test:
   script:
-  - python setup.py test
+  - pytest tests/
+  # - python setup.py test
   # - pip install pep8  # you can also use tox
   # - pep8 --ignore=E501
 
