--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,6 +36,7 @@ before_script:
 
 test:
   script:
+  - pip install pytest
   - pytest tests/
   # - python setup.py test
   # - pip install pep8  # you can also use tox
