--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,12 +42,12 @@ test:
   # - pip install pep8  # you can also use tox
   # - pep8 --ignore=E501
 
-run:
-  script:
-  - python setup.py bdist_wheel
-  # an alternative approach is to install and run:
-  - pip install dist/*
-  # run the command here
-  artifacts:
-    paths:
-    - dist/*.whl
+# run:
+#   script:
+#   - python setup.py bdist_wheel
+#   # an alternative approach is to install and run:
+#   - pip install dist/*
+#   # run the command here
+#   artifacts:
+#     paths:
+#     - dist/*.whl
