--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,7 +37,7 @@ before_script:
 
 test:
   script:
-  - pip install pytest
+  - pip install pytest pexpect tox click
   - pytest
   # - python setup.py test
   # - pip install pep8  # you can also use tox
