--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,7 @@ before_script:
   - python setup.py install
   - cd ..
   - ls -lart
-  - cd mininet-topology-yaml/
+  - cd /builds/tsen/mininet-topology-yaml
   # - pip install virtualenv
   # - virtualenv venv
   # - source venv/bin/activate
