--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,7 +35,8 @@ before_script:
   # - pip install virtualenv
   # - virtualenv venv
   # - source venv/bin/activate
-  # - pip install -r requirements.txt
+  - pip install -r requirements.txt
+  - pip install -U .
 
 
 test:
